gen/include/notcurses/notcurses.h

#define API __attribute__((visibility("default")))
#define API __declspec(dllexport)
#define ALLOC __attribute__((malloc)) __attribute__((warn_unused_result))
struct ncplane;   
struct ncvisual;  
struct ncdirect;  
typedef enum {
  NCBLIT_DEFAULT, 
  NCBLIT_1x1,     
  NCBLIT_2x1,     
  NCBLIT_2x2,     
  NCBLIT_3x2,     
  NCBLIT_BRAILLE, 
  NCBLIT_PIXEL,   
  NCBLIT_4x1,     
  NCBLIT_8x1,     
} ncblitter_e;
typedef enum {
  NCALIGN_UNALIGNED,
  NCALIGN_LEFT,
  NCALIGN_CENTER,
  NCALIGN_RIGHT,
} ncalign_e;
#define NCALIGN_TOP NCALIGN_LEFT
#define NCALIGN_BOTTOM NCALIGN_RIGHT
typedef enum {
  NCSCALE_NONE,
  NCSCALE_SCALE,
  NCSCALE_STRETCH,
  NCSCALE_NONE_HIRES,
  NCSCALE_SCALE_HIRES,
} ncscale_e;
#define NCALPHA_HIGHCONTRAST    0x30000000ull
#define NCALPHA_TRANSPARENT     0x20000000ull
#define NCALPHA_BLEND           0x10000000ull
#define NCALPHA_OPAQUE          0x00000000ull
#define NCPALETTESIZE 256
#define NC_NOBACKGROUND_MASK  0x8700000000000000ull
#define NC_BGDEFAULT_MASK     0x0000000040000000ull
#define NC_BG_RGB_MASK        0x0000000000ffffffull
#define NC_BG_PALETTE         0x0000000008000000ull
#define NC_BG_ALPHA_MASK      0x30000000ull
#define NCCHANNEL_INITIALIZER(r, g, b) \
  (((uint32_t)r << 16u) + ((uint32_t)g << 8u) + (b) + NC_BGDEFAULT_MASK)
#define NCCHANNELS_INITIALIZER(fr, fg, fb, br, bg, bb) \
  ((NCCHANNEL_INITIALIZER(fr, fg, fb) << 32ull) + \
   (NCCHANNEL_INITIALIZER(br, bg, bb)))
#define WCHAR_MAX_UTF8BYTES 4
#define NCCELL_INITIALIZER(c, s, chan) { .gcluster = (htole(c)), .gcluster_backstop = 0,\
  .width = (uint8_t)((wcwidth(c) < 0 || !c) ? 1 : wcwidth(c)), .stylemask = (s), .channels = (chan), }
#define NCCELL_CHAR_INITIALIZER(c) { .gcluster = (htole(c)), .gcluster_backstop = 0,\
  .width = (uint8_t)((wcwidth(c) < 0 || !c) ? 1 : wcwidth(c)), .stylemask = 0, .channels = 0, }
#define NCCELL_TRIVIAL_INITIALIZER { .gcluster = 0, .gcluster_backstop = 0,\
                                     .width = 1, .stylemask = 0, .channels = 0, }
#define NCSTYLE_MASK      0xffffu
#define NCSTYLE_ITALIC    0x0010u
#define NCSTYLE_UNDERLINE 0x0008u
#define NCSTYLE_UNDERCURL 0x0004u
#define NCSTYLE_BOLD      0x0002u
#define NCSTYLE_STRUCK    0x0001u
#define NCSTYLE_NONE      0
#define NCOPTION_INHIBIT_SETLOCALE   0x0001ull
#define NCOPTION_NO_CLEAR_BITMAPS    0x0002ull
#define NCOPTION_NO_WINCH_SIGHANDLER 0x0004ull
#define NCOPTION_NO_QUIT_SIGHANDLERS 0x0008ull
#define NCOPTION_PRESERVE_CURSOR     0x0010ull
#define NCOPTION_SUPPRESS_BANNERS    0x0020ull
#define NCOPTION_NO_ALTERNATE_SCREEN 0x0040ull
#define NCOPTION_NO_FONT_CHANGES     0x0080ull
#define NCOPTION_DRAIN_INPUT         0x0100ull
#define NCMICE_NO_EVENTS     0
#define NCMICE_MOVE_EVENT    0x1
#define NCMICE_BUTTON_EVENT  0x2
#define NCMICE_DRAG_EVENT    0x4
#define NCMICE_ALL_EVENTS    0x7
#define NCPLANE_OPTION_HORALIGNED   0x0001ull
#define NCPLANE_OPTION_VERALIGNED   0x0002ull
#define NCPLANE_OPTION_MARGINALIZED 0x0004ull
#define NCPLANE_OPTION_FIXED        0x0008ull
#define NCPLANE_OPTION_AUTOGROW     0x0010ull
#define NCPLANE_OPTION_VSCROLL      0x0020ull
#define NCBOXMASK_TOP    0x0001
#define NCBOXMASK_RIGHT  0x0002
#define NCBOXMASK_BOTTOM 0x0004
#define NCBOXMASK_LEFT   0x0008
#define NCBOXGRAD_TOP    0x0010
#define NCBOXGRAD_RIGHT  0x0020
#define NCBOXGRAD_BOTTOM 0x0040
#define NCBOXGRAD_LEFT   0x0080
#define NCBOXCORNER_MASK 0x0300
#define NCBOXCORNER_SHIFT 8u
#define NCVISUAL_OPTION_NODEGRADE     0x0001ull 
#define NCVISUAL_OPTION_BLEND         0x0002ull 
#define NCVISUAL_OPTION_HORALIGNED    0x0004ull 
struct ncvisual_options {
  struct ncplane* n;
  ncscale_e scaling;
  int y, x;
  unsigned begy, begx; 
  unsigned leny, lenx; 
  ncblitter_e blitter; 
  uint64_t flags; 
  uint32_t transcolor; 
  unsigned pxoffy, pxoffx;
};
typedef struct ncvgeom {
  unsigned pixy, pixx;     
  unsigned cdimy, cdimx;   
  unsigned rpixy, rpixx;   
  unsigned rcelly, rcellx; 
  unsigned scaley, scalex; 
  unsigned begy, begx;     
  unsigned leny, lenx;     
  unsigned maxpixely, maxpixelx; 
  ncblitter_e blitter;     
} ncvgeom;
typedef int (*ncstreamcb)(struct ncvisual*, struct ncvisual_options*,
                          const struct timespec*, void*);