gen/include/notcurses/direct.h

typedef struct ncplane ncdirectv;
typedef struct ncvisual ncdirectf;
API int ncdirect_render_image(struct ncdirect* n, const char* filename,
                              ncalign_e align, ncblitter_e blitter,
                              ncscale_e scale)
  __attribute__ ((nonnull (1, 2)));
API ALLOC ncdirectv* ncdirect_render_frame(struct ncdirect* n, const char* filename,
                                           ncblitter_e blitter, ncscale_e scale,
                                           int maxy, int maxx)
  __attribute__ ((nonnull (1, 2)));
API int ncdirect_raster_frame(struct ncdirect* n, ncdirectv* ncdv, ncalign_e align)
  __attribute__ ((nonnull (1, 2)));
API ALLOC ncdirectf* ncdirectf_from_file(struct ncdirect* n, const char* filename)
  __attribute__ ((nonnull (1, 2)));
API void ncdirectf_free(ncdirectf* frame);
API ALLOC ncdirectv* ncdirectf_render(struct ncdirect* n, ncdirectf* frame,
                                      const struct ncvisual_options* vopts)
  __attribute__ ((nonnull (1, 2)));
API int ncdirectf_geom(struct ncdirect* n, ncdirectf* frame,
                       const struct ncvisual_options* vopts, ncvgeom* geom)
  __attribute__ ((nonnull (1, 2)));
API int ncdirect_stream(struct ncdirect* n, const char* filename, ncstreamcb streamer,
                        struct ncvisual_options* vopts, void* curry)
  __attribute__ ((nonnull (1, 2)));
ALLOC API char* ncdirect_detected_terminal(const struct ncdirect* n)
  __attribute__ ((nonnull (1)));
static inline bool
ncdirect_cantruecolor(const struct ncdirect* n){
  return ncdirect_capabilities(n)->rgb;
}
static inline bool
ncdirect_canchangecolor(const struct ncdirect* n){
  return nccapability_canchangecolor(ncdirect_capabilities(n));
}
static inline bool
ncdirect_canfade(const struct ncdirect* n){
  return ncdirect_canchangecolor(n) || ncdirect_cantruecolor(n);
}
static inline bool
ncdirect_canopen_images(const struct ncdirect* n __attribute__ ((unused))){
  return notcurses_canopen_images(NULL);
}
static inline bool
ncdirect_canopen_videos(const struct ncdirect* n __attribute__ ((unused))){
  return notcurses_canopen_videos(NULL);
}
API bool ncdirect_canutf8(const struct ncdirect* n)
  __attribute__ ((nonnull (1)));
API int ncdirect_check_pixel_support(const struct ncdirect* n)
  __attribute__ ((nonnull (1)));
static inline bool
ncdirect_canhalfblock(const struct ncdirect* nc){
  return ncdirect_canutf8(nc);
}
static inline bool
ncdirect_canquadrant(const struct ncdirect* nc){
  return ncdirect_canutf8(nc) && ncdirect_capabilities(nc)->quadrants;
}
static inline bool
ncdirect_cansextant(const struct ncdirect* nc){
  return ncdirect_canutf8(nc) && ncdirect_capabilities(nc)->sextants;
}
static inline bool
ncdirect_canbraille(const struct ncdirect* nc){
  return ncdirect_canutf8(nc) && ncdirect_capabilities(nc)->braille;
}
API bool ncdirect_canget_cursor(const struct ncdirect* nc)
  __attribute__ ((nonnull (1)));